2010-01-07  Werner Koch  <wk@g10code.com>

	* m4/gpg4win.m4: Fix my last change so that --enable-debug is not
	enabled by default.

2010-01-06  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* src/inst-libpng.nsi (install libpng binaries for testing): Comment out.

2010-01-05  Colin Leroy  <colin@colino.net>

	* packages/packages.current: Update Claws Mail and its plugins, fix
	packages.

2010-01-05  Werner Koch  <wk@g10code.com>

	* packages/download.sh: Add option --quiet.

	* m4/gpg4win.m4: Quote variables in test comamnds instead of using
	instead of comparing against xno or xyes.

	* packages/packages.current: Update gpgex and gpgol.  Update
	libpng and pkgconfig.

2009-12-22  Werner Koch  <wk@g10code.com>

	* packages/packages.current: Update libgcrypt and GnuPG.  Update
	GpgOL to the latest svn version.

2009-12-18  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* src/installer.nsi,
	  doc/logo/gpg4win-nsis-wizard-install-164x314.bmp,
	  doc/logo/gpg4win-nsis-wizard-uninstall-164x314.bmp,
	  doc/logo/gpg4win-nsis-install.ico,
	  doc/logo/gpg4win-nsis-header-install-150x57.bmp,
  	  doc/logo/gpg4win-nsis-uninstall.ico,
	  doc/logo/gpg4win-nsis-header-uninstall-150x57.bmp:
	  Add new bitmaps and icons for nsis installer.

2009-12-15  Emanuel Schuetze  <emanuel.schuetze@intevation.de>

	* packages/packages.current: Update gnupg, kleopatra and kdelibs.

2009-12-08  Colin Leroy  <colin@colino.net>

	* src/inst-claws-mail.nsi, src/uninst-claws-mail.nsi, 
	src/Makefile.am, packages/packages.current: Update Claws Mail
	and its plugins.

2009-10-20  Marcus Brinkmann  <marcus@g10code.com>

	* src/gpg4win.mk.in (SPKG stamps/stamp-$(1)-04-install): Remove
	share/info/dir to avoid stow conflicts.

2009-10-08  Marcus Brinkmann  <marcus@g10code.com>

	* Makefile.am (EXTRA_DIST): Add
	patches/scute-1.3.0/01-wsastartup.patch.

2009-10-05  Marcus Brinkmann  <marcus@g10code.com>

	* src/inst-sections.nsi (calc_defaults_man_advanced_en_done):