@@ -49,16 +49,6 @@ Section "-gpgme" SEC_gpgme
       File /oname=libgpgme-glib-11.dll.tmp "${prefix}/bin/libgpgme-glib-11.dll"
       Rename /REBOOTOK libgpgme-glib-11.dll.tmp libgpgme-glib-11.dll
 
-!ifdef HAVE_PKG_QT
-  ClearErrors
-  SetOverwrite try
-  File "${prefix}/bin/libgpgme-qt-11.dll"
-  SetOverwrite lastused
-  ifErrors 0 +3
-      File /oname=libgpgme-qt-11.dll.tmp "${prefix}/bin/libgpgme-qt-11.dll"
-      Rename /REBOOTOK libgpgme-qt-11.dll.tmp libgpgme-qt-11.dll
-!endif
-
   File "${prefix}/libexec/gpgme-w32spawn.exe"
 
 !endif
