@@ -1,3 +1,8 @@
+2010-01-08  Marcus Brinkmann  <marcus@g10code.de>
+
+	* src/Makefile.am (gpg4win_pkg_gpgme_configure): Disable Qt support.
+	* src/inst-gpgme.nsi: Do not install qt version.
+
 2010-01-07  Werner Koch  <wk@g10code.com>
 
 	* m4/gpg4win.m4: Fix my last change so that --enable-debug is not
